@@ -33,6 +33,7 @@
             "File::Spec" : "0",
             "Perl::Critic::Utils" : "0",
             "Pod::Wordlist" : "0",
+            "Test::CPAN::Changes" : "0",
             "Test::CPAN::Meta" : "0.12",
             "Test::CPAN::Meta::JSON" : "0",
             "Test::DistManifest" : "1.003",
@@ -134,6 +135,10 @@
       },
       "Dist::Zilla::Plugin::Author::SKIRMESS::Test::XT::Test::CPAN::Meta::JSON" : {
          "file" : "lib/Dist/Zilla/Plugin/Author/SKIRMESS/Test/XT/Test/CPAN/Meta/JSON.pm",
+         "version" : "0.005"
+      },
+      "Dist::Zilla::Plugin::Author::SKIRMESS::Test::XT::Test::Changes" : {
+         "file" : "lib/Dist/Zilla/Plugin/Author/SKIRMESS/Test/XT/Test/Changes.pm",
          "version" : "0.005"
       },
       "Dist::Zilla::Plugin::Author::SKIRMESS::Test::XT::Test::DistManifest" : {
@@ -245,6 +250,11 @@
             },
             "name" : "@Author::SKIRMESS/stale modules, build",
             "version" : "0.054"
+         },
+         {
+            "class" : "Dist::Zilla::Plugin::Author::SKIRMESS::Test::XT::Test::Changes",
+            "name" : "@Author::SKIRMESS/Author::SKIRMESS::Test::XT::Test::Changes",
+            "version" : "0.005"
          },
          {
             "class" : "Dist::Zilla::Plugin::Author::SKIRMESS::Test::XT::Test::CPAN::Meta",
